Updated the HTML
Added the required information for the HTML.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,86 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-	
-		<title>Neil Third Treehouse Project: Online Registration Form</title>
 
-		<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
-		<link href="css/normalize.css" rel="stylesheet" type="text/css">
-		<link href="css/styles.css" rel="stylesheet" type="text/css">
-		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,300' rel='stylesheet' type='text/css'>
-	
-	</head>
+<head>
+
+	<title>Neil Third Treehouse Project: Online Registration Form</title>
+
+	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+	<link href="css/normalize.css" rel="stylesheet" type="text/css">
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,800,600,300' rel='stylesheet' type='text/css'>
+
+</head>
 
 <body>
-	
+	<section class="heading">
+		<h1>THE CODE REVIEW</h1>
+	</section>
+
+	<section class="callToAction">
+		<h2>Signup for our newsletter</h2>
+		<p>Get the latest news on how your code is doing right in your inbox</p>
+	</section>
+
+	<section class="formFillOut">
+		<form>
+			<fieldset>
+
+				<legend>Contact Information</legend>
+
+				<label>Full Name</label>
+				<input type="text">
+
+				<label>Email Address</label>
+				<input type="email">
+
+				<label>Phone Number</label>
+				<input type="tel">
+
+				<label>Street Address</label>
+
+			</fieldset>
+		</form>
+
+		<form>
+			<fieldset>
+
+				<legend>Newsletter</legend>
+
+				<p>Select the newsletter you would like to receive</p>
+
+				<input type="checkbox">
+				<label>HTML News</label>
+
+				<input type="checkbox">
+				<label>CSS News</label>
+
+				<input type="checkbox">
+				<label>Javascript News</label>
+
+				<p>Newsletter format</p>
+
+				<input type="radio">
+				<label>HTML</label>
+
+				<input type="radio">
+				<label>Plain Text</label>
+
+				<p>Other topics you'd like to hear about</p>
+				<textarea></textarea>
+
+			</fieldset>
+		</form>
+
+		<button>Sign Up</button>
+	</section>
+
+	<footer>
+
+		<p><em>Copyright The Code Review</em></p>
+
+	</footer>
 </body>
 
 </html>
