--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
 					<select name = "state" >
 						<option class="selectState" value="">Choose a State</option>
 						<option value="Alabama">Alabama</option>
+						<option value="Alaska">Alaska</option>
+						<option value="Arizona">Arizona</option>
+						<option value="Arkansas">Arkansas</option>
+						<option value="California">California</option>
+						<option value="Colorado">Colorado</option>
+						<option value="Connecticut">Connecticut</option>
+						<option value="Delaware">Delaware</option>
+						<option value="Florida">Floriad</option>
 						<option>Alaska</option>
 						
 					</select>
@@ -99,7 +107,7 @@
 					<p>Other topics you'd like to hear about</p>
 					<textarea></textarea>
 					
-					<button>Sign Up</button>
+					<button type="submit">Sign Up</button>
 		
 				</fieldset>
 			</form>
