--- a/index.html
+++ b/index.html
@@ -15,40 +15,41 @@
 </head>
 
 <body>
-	<section class="heading">
+	<div class="heading">
 		<h1>THE CODE REVIEW</h1>
-	</section>
+	</div>
 
 	<div class="wrapper">
-		<section class="callToAction">
+		<div class="callToAction">
 			<h2>Signup for our newsletter</h2>
 			<p>Get the latest news on how your code is doing right in your inbox</p>
-		</section>
+		</div>
 
 
 		<form>
-			<section class="contactFillOut">
+			<div class="contactFillOut">
 				<fieldset>
 
 					<legend>Contact Information</legend>
 
 					<label for="name">Full Name</label>
-					<input type="text" class="required" required placeholder="Required" id="name">
+					<input type="text" class="required" required placeholder="Required" id="name" title="First name then last name">
 
 					<label for="emailAddress">Email Address</label>
-					<input type="email" class="required" required placeholder="Required" id="emailAddress">
+					<input type="email" class="required" required placeholder="Required" id="emailAddress" title="example@example.com">
 
 					<label for="telephone">Phone Number</label>
-					<input type="tel" id="telephone">
+					<input type="tel" id="telephone" placeholder="ex. (123) 111-2222">
 
 					<label for="streetAddress">Street Address</label>
-					<input type="text" id="streetAddress">
+					<input type="text" id="streetAddress" placeholder="ex. 123 Example Street">
 
 					<label for="cityInfo">City</label>
-					<input type="text" id="cityInfo">
+					<input type="text" id="cityInfo" placeholder="ex. Fakeshire">
 
 					<label for="stateInfo">State</label>
 					<select name="state" id="stateInfo">
+
 						<option class="selectState" value="">Choose a State</option>
 						<option value="Alabama">Alabama</option>
 						<option value="Alaska">Alaska</option>
@@ -58,19 +59,18 @@
 						<option value="Colorado">Colorado</option>
 						<option value="Connecticut">Connecticut</option>
 						<option value="Delaware">Delaware</option>
-						<option value="Florida">Floriad</option>
-						<option>Alaska</option>
+						<option value="Florida">Florida</option>
 
 					</select>
 
 					<label for="zipCodeAddress">Zip Code</label>
-					<input class="zipCode" type="text" id="zipCodeAddress">
+					<input class="zipCode" type="text" id="zipCodeAddress" placeholder="ex. 11120">
 
 				</fieldset>
 
-			</section>
+			</div>
 
-			<section class="newsletterFillOut">
+			<div class="newsletterFillOut">
 
 
 				<fieldset>
@@ -112,7 +112,7 @@
 					<input type="submit" value="Sign Up">
 
 				</fieldset>
-			</section>
+			</div>
 		</form>
 	</div>
 
