--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
 					<legend>Contact Information</legend>
 
 					<label for="name">Full Name</label>
-					<input type="text" class="required" required placeholder="Required" id="name" title="First name then last name">
+					<input type="text" class="required" required placeholder="Required" id="name" title="First name then last name" name="name">
 
 					<label for="emailAddress">Email Address</label>
-					<input type="email" class="required" required placeholder="Required" id="emailAddress" title="example@example.com">
+					<input type="email" class="required" required placeholder="Required" id="emailAddress" title="example@example.com" name="email">
 
 					<label for="telephone">Phone Number</label>
-					<input type="tel" id="telephone" placeholder="ex. (123) 111-2222">
+					<input type="tel" id="telephone" placeholder="ex. (123) 111-2222" name="phone">
 
 					<label for="streetAddress">Street Address</label>
-					<input type="text" id="streetAddress" placeholder="ex. 123 Example Street">
+					<input type="text" id="streetAddress" placeholder="ex. 123 Example Street" name="address">
 
 					<label for="cityInfo">City</label>
-					<input type="text" id="cityInfo" placeholder="ex. Fakeshire">
+					<input type="text" id="cityInfo" placeholder="ex. Fakeshire" name="city">
 
 					<label for="stateInfo">State</label>
-					<select name="state" id="stateInfo">
+					<select id="stateInfo" name="state">
 
-						<option class="selectState" value="">Choose a State</option>
+						<option class="selectState" value="" disabled selected hidden>Choose a State</option>
 						<option value="Alabama">Alabama</option>
 						<option value="Alaska">Alaska</option>
 						<option value="Arizona">Arizona</option>
@@ -64,7 +64,7 @@
 					</select>
 
 					<label for="zipCodeAddress">Zip Code</label>
-					<input class="zipCode" type="text" id="zipCodeAddress" placeholder="ex. 11120">
+					<input class="zipCode" type="text" id="zipCodeAddress" placeholder="ex. 11120" name="zipCode">
 
 				</fieldset>
 
@@ -80,17 +80,17 @@
 					<p>Select the newsletter you would like to receive</p>
 
 					<div>
-						<input type="checkbox" id="htmlNews" value="htmlNews">
+						<input type="checkbox" id="htmlNews" value="htmlNews" name="newsCheckbox">
 						<label for="htmlNews">HTML News</label>
 					</div>
 
 					<div>
-						<input type="checkbox" id="cssNews" value="cssNews">
+						<input type="checkbox" id="cssNews" value="cssNews" name="newsCheckbox">
 						<label for="cssNews">CSS News</label>
 					</div>
 
 					<div>
-						<input type="checkbox" id="javascriptNews" value="javascriptNews">
+						<input type="checkbox" id="javascriptNews" value="javascriptNews" name="newsCheckbox">
 						<label for="javascriptNews">Javascript News</label>
 					</div>
 
@@ -106,8 +106,10 @@
 						<label for="plainTextRadio">Plain Text</label>
 					</div>
 
-					<p>Other topics you'd like to hear about</p>
-					<textarea></textarea>
+					<div class="topicsTextarea">
+						<label class="topics topicsInterestedLabel" for="topicsInterested">Other topics you'd like to hear about</label>
+						<textarea id="topicsInterested" name="topicsInterested"></textarea>
+					</div>
 
 					<input type="submit" value="Sign Up">
 
